<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="101dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/profileButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/profile_button"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="5dp"
        android:src="@drawable/profile_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/settings_button"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="5dp"
        android:src="@drawable/settings_icon"
        app:layout_constraintEnd_toStartOf="@+id/profileButton"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="272dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="493dp"
        android:background="@color/colorBackground"
        android:drawableLeft="@drawable/ic_search"
        android:drawablePadding="10dp"
        android:hint="Search"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="#AAAAAA"
        app:layout_constraintEnd_toStartOf="@+id/profileButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_movies"
        android:layout_width="240dp"
        android:layout_height="320dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="168dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/movies_button"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="10dp"
        android:src="@drawable/movies_icon"
        app:layout_constraintStart_toEndOf="@+id/btn_livetv"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_shows"
        android:layout_width="240dp"
        android:layout_height="320dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="168dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/shows_button"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="10dp"
        android:src="@drawable/show_icon"
        app:layout_constraintStart_toEndOf="@+id/btn_movies"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_update"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/update_button"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="10dp"
        android:src="@drawable/update_icon"
        app:layout_constraintEnd_toStartOf="@+id/settingsButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_multiscreen"
        android:layout_width="55dp"
        android:layout_height="52dp"
        android:layout_marginStart="528dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/multi_screen_button"
        android:padding="10dp"
        android:src="@drawable/multiscreen_icon"
        app:layout_constraintStart_toEndOf="@+id/btn_update"
        app:layout_constraintTop_toBottomOf="@+id/btn_shows" />

    <ImageButton
        android:id="@+id/btn_livetv"
        android:layout_width="240dp"
        android:layout_height="320dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="168dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/livetv_button"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="10dp"
        android:src="@drawable/livetv_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_favorites"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/favorites_button"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:src="@drawable/favorites_icon"
        app:layout_constraintEnd_toStartOf="@+id/btn_update"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
